--- a/Cloud-Print.me/Cloud-Print.me/en.lproj/MainStoryboard.storyboard
+++ b/Cloud-Print.me/Cloud-Print.me/en.lproj/MainStoryboard.storyboard
@@ -164,35 +164,8 @@
                                             <segue destination="8aB-Tr-7AP" kind="push" id="dCr-4j-n7J"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="60" id="Y1o-HA-UmO">
-                                        <rect key="frame" x="0.0" y="308" width="320" height="60"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Мои файлы" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UPo-5L-qag">
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="139" id="E7X-MI-71c"/>
-                                                        <constraint firstAttribute="height" constant="28" id="rB9-tc-if7"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="balance.png" translatesAutoresizingMaskIntoConstraints="NO" id="Nuy-5G-lEY"/>
-                                            </subviews>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstItem="Nuy-5G-lEY" firstAttribute="leading" secondItem="Y1o-HA-UmO" secondAttribute="leading" constant="13" id="76W-wi-7Sn"/>
-                                            <constraint firstItem="Nuy-5G-lEY" firstAttribute="centerY" secondItem="Y1o-HA-UmO" secondAttribute="centerY" type="default" id="Uib-h5-Aj0"/>
-                                            <constraint firstItem="UPo-5L-qag" firstAttribute="top" secondItem="Y1o-HA-UmO" secondAttribute="top" constant="11" id="vcA-eK-FcH"/>
-                                            <constraint firstItem="UPo-5L-qag" firstAttribute="leading" secondItem="Y1o-HA-UmO" secondAttribute="leading" constant="99" id="vna-ae-ymx"/>
-                                        </constraints>
-                                    </tableViewCell>
                                     <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="60" id="cBg-WJ-dMu">
-                                        <rect key="frame" x="0.0" y="368" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="308" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
@@ -241,19 +214,68 @@
         <scene sceneID="c2Z-vm-3pp">
             <objects>
                 <tableViewController id="vai-mb-TBy" customClass="BalanceViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="bHl-WP-3Md">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="74" sectionHeaderHeight="22" sectionFooterHeight="22" id="bHl-WP-3Md">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="v5b-ic-Yy0">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BalanceCell" rowHeight="74" id="v5b-ic-Yy0" customClass="BalanceTableViewCell">
+                                <rect key="frame" x="0.0" y="22" width="320" height="74"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="73"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Списание по заказу №2221" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L2x-OO-SYl">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Отправка посылки. Служба: еуые, декларация: еуые" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rk-ht-zyF">
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="FeF-GS-ZUd"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="02.10.2012 14:39" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WZ8-zJ-N3B">
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="146" id="XhK-GA-UZO"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="-5000 грн." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KVq-AL-iqy">
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="82" id="UPo-6I-glV"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="7rk-ht-zyF" secondAttribute="bottom" constant="3" id="AKf-Uq-M67"/>
+                                    <constraint firstItem="7rk-ht-zyF" firstAttribute="leading" secondItem="v5b-ic-Yy0" secondAttribute="leading" constant="20" type="default" id="DNB-yW-bHs"/>
+                                    <constraint firstAttribute="trailing" secondItem="7rk-ht-zyF" secondAttribute="trailing" constant="20" type="default" id="NL0-Og-Say"/>
+                                    <constraint firstItem="KVq-AL-iqy" firstAttribute="baseline" secondItem="WZ8-zJ-N3B" secondAttribute="baseline" type="default" id="WgZ-0r-6kH"/>
+                                    <constraint firstItem="L2x-OO-SYl" firstAttribute="leading" secondItem="v5b-ic-Yy0" secondAttribute="leading" constant="20" type="default" id="Y1M-t1-HWZ"/>
+                                    <constraint firstItem="L2x-OO-SYl" firstAttribute="top" secondItem="v5b-ic-Yy0" secondAttribute="top" constant="10" id="beo-zl-lod"/>
+                                    <constraint firstItem="WZ8-zJ-N3B" firstAttribute="top" secondItem="v5b-ic-Yy0" secondAttribute="top" constant="32" id="bmK-Jl-ALx"/>
+                                    <constraint firstAttribute="trailing" secondItem="KVq-AL-iqy" secondAttribute="trailing" constant="20" type="default" id="lPX-mR-NgR"/>
+                                    <constraint firstAttribute="trailing" secondItem="L2x-OO-SYl" secondAttribute="trailing" constant="20" type="default" id="rYN-Ki-AiO"/>
+                                    <constraint firstItem="WZ8-zJ-N3B" firstAttribute="leading" secondItem="v5b-ic-Yy0" secondAttribute="leading" constant="20" type="default" id="sAs-Dn-u0i"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="amountMoneyLabel" destination="KVq-AL-iqy" id="8id-BQ-dSf"/>
+                                    <outlet property="commentLabel" destination="7rk-ht-zyF" id="TN9-oM-rKc"/>
+                                    <outlet property="timeLabel" destination="WZ8-zJ-N3B" id="KFG-mk-z8g"/>
+                                    <outlet property="titleLabel" destination="L2x-OO-SYl" id="lrZ-CB-a55"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -505,43 +527,6 @@ ENCb0L7Qs9C40L0
         <image name="profil.png" width="50" height="50"/>
         <image name="zakaz.png" width="50" height="50"/>
     </resources>
-    <classes>
-        <class className="BalanceViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BalanceViewController.h"/>
-        </class>
-        <class className="HomeViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
-        </class>
-        <class className="LoginViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
-        </class>
-        <class className="MessageTableViewCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MessageTableViewCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="messageDate" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="messageDescription" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="MessagesViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MessagesViewController.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="OrdersViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/OrdersViewController.h"/>
-        </class>
-        <class className="ProfileViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProfileViewController.h"/>
-        </class>
-        <class className="TwoLabelsCustomCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TwoLabelsCustomCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="firstLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="secondLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
